--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
 </head>
-<body class="cms-index-index cms-home-page">
+<body class="">
 <div id="page">
 
   <!-- Header -->
@@ -165,8 +165,8 @@
                     <div class="wrap-popup column1">
                       <div class="popup">
                         <ul class="nav">
-                          <li><a href="">Shop By Vehicle</a></li>
-                          <li><a href="">Shop By Size</a></li>
+                          <li><a href="shop_tires_by_vehicle.html">Shop By Vehicle</a></li>
+                          <li><a href="shop_tires_by_size.html">Shop By Size</a></li>
                           <li><a href="shop_tires_by_brand.html">Shop By Brand</a></li>
                         </ul>
                       </div>
@@ -176,9 +176,9 @@
                     <div class="wrap-popup column1">
                       <div class="popup">
                         <ul class="nav">
-                          <li><a href="">Shop By Vehicle</a></li>
-                          <li><a href="">Shop By Size</a></li>
-                          <li><a href="">Shop By Brand</a></li>
+                          <li><a href="shop_wheels_by_vehicle.html">Shop By Vehicle</a></li>
+                          <li><a href="shop_wheels_by_dimensions.html">Shop By Size</a></li>
+                          <li><a href="shop_wheels_by_brand.html">Shop By Brand</a></li>
                         </ul>
                       </div>
                     </div>
@@ -538,237 +538,30 @@
         </form>
       </div>
     </li>
-    <li> <a href="home.html">Home</a>
+    <li><a href="home.html">Home</a></li>
+    <li><a href="shop_tires.html">Tires</a>
       <ul>
-        <li><a href="home.html">Home Version 1</a></li>
-        <li><a href="../home2/index.html">Home Version 2</a></li>
+        <li><a href="shop_tires_by_vehicle.html">Shop By Vehicle</a></li>
+        <li><a href="shop_tires_by_size.html">Shop By Size</a></li>
+        <li><a href="shop_tires_by_brand.html">Shop By Brand</a></li>
       </ul>
     </li>
-    <li> <a href="#">Pages</a>
+    <li><a href="shop_wheels.html">Wheels</a>
       <ul>
-        <li><a href="grid.html">Grid</a> </li>
-        <li> <a href="list.html">List</a> </li>
-        <li> <a href="product_detail.html">Product Detail</a> </li>
-        <li> <a href="shopping_cart.html">Shopping Cart</a> </li>
-        <li><a href="checkout.html">Checkout</a> </li>
-        <li> <a href="wishlist.html">Wishlist</a> </li>
-        <li> <a href="dashboard.html">Dashboard</a> </li>
-        <li> <a href="multiple_addresses.html">Multiple Addresses</a> </li>
-        <li> <a href="about_us.html">About us</a> </li>
-        <li> <a href="blog.html">Blog</a>
-          <ul>
-            <li><a href="blog-detail.html">Blog Detail</a> </li>
-          </ul>
-        </li>
-        <li><a href="contact_us.html">Contact us</a> </li>
-        <li><a href="404error.html">404 Error Page</a> </li>
+        <li><a href="shop_wheels_by_vehicle.html">Shop By Vehicle</a></li>
+        <li><a href="shop_wheels_by_dimensions.html">Shop By Size</a></li>
+        <li><a href="shop_wheels_by_brand.html">Shop By Brand</a></li>
       </ul>
     </li>
-    <li> <a href="#">Women</a>
-      <ul>
-        <li> <a href="#" class="">Stylish Bag</a>
-          <ul>
-            <li> <a href="grid.html" class="">Clutch Handbags</a> </li>
-            <li> <a href="grid.html" class="">Diaper Bags</a> </li>
-            <li> <a href="grid.html" class="">Bags</a> </li>
-            <li> <a href="grid.html" class="">Hobo handbags</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Material Bag</a>
-          <ul>
-            <li> <a href="grid.html">Beaded Handbags</a> </li>
-            <li> <a href="grid.html">Fabric Handbags</a> </li>
-            <li> <a href="grid.html">Handbags</a> </li>
-            <li> <a href="grid.html">Leather Handbags</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Shoes</a>
-          <ul>
-            <li> <a href="grid.html">Flat Shoes</a> </li>
-            <li> <a href="grid.html">Flat Sandals</a> </li>
-            <li> <a href="grid.html">Boots</a> </li>
-            <li> <a href="grid.html">Heels</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Jwellery</a>
-          <ul>
-            <li> <a href="grid.html">Bracelets</a> </li>
-            <li> <a href="grid.html">Necklaces &amp; Pendent</a> </li>
-            <li> <a href="grid.html">Pendants</a> </li>
-            <li> <a href="grid.html">Pins &amp; Brooches</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Dresses</a>
-          <ul>
-            <li> <a href="grid.html">Casual Dresses</a> </li>
-            <li> <a href="grid.html">Evening</a> </li>
-            <li> <a href="grid.html">Designer</a> </li>
-            <li> <a href="grid.html">Party</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Swimwear</a>
-          <ul>
-            <li> <a href="grid.html">Swimsuits</a> </li>
-            <li> <a href="grid.html">Beach Clothing</a> </li>
-            <li> <a href="grid.html">Clothing</a> </li>
-            <li> <a href="grid.html">Bikinis</a> </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li> <a href="grid.html">Men</a>
-      <ul>
-        <li> <a href="grid.html" class="">Shoes</a>
-          <ul class="level1">
-            <li class="level2 nav-6-1-1"><a href="grid.html">Sport Shoes</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Casual Shoes</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Leather Shoes</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">canvas shoes</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Dresses</a>
-          <ul class="level1">
-            <li class="level2 nav-6-1-1"><a href="grid.html">Casual Dresses</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Evening</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Designer</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Party</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Jackets</a>
-          <ul class="level1">
-            <li class="level2 nav-6-1-1"><a href="grid.html">Coats</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Formal Jackets</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Leather Jackets</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Blazers</a> </li>
-          </ul>
-        </li>
-        <li> <a href="#.html">Watches</a>
-          <ul class="level1">
-            <li class="level2 nav-6-1-1"><a href="grid.html">Fasttrack</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Casio</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Titan</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Tommy-Hilfiger</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Sunglasses</a>
-          <ul class="level1">
-            <li class="level2 nav-6-1-1"><a href="grid.html">Ray Ban</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Fasttrack</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Police</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Oakley</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Accesories</a>
-          <ul class="level1">
-            <li class="level2 nav-6-1-1"><a href="grid.html">Backpacks</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Wallets</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Laptops Bags</a> </li>
-            <li class="level2 nav-6-1-1"><a href="grid.html">Belts</a> </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li> <a href="grid.html">Electronics</a>
-      <ul>
-        <li> <a href="grid.html"><span>Mobiles</span></a>
-          <ul>
-            <li> <a href="grid.html"><span>Samsung</span></a> </li>
-            <li> <a href="grid.html"><span>Nokia</span></a> </li>
-            <li> <a href="grid.html"><span>IPhone</span></a> </li>
-            <li> <a href="grid.html"><span>Sony</span></a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html" class=""><span>Accesories</span></a>
-          <ul>
-            <li> <a href="grid.html"><span>Mobile Memory Cards</span></a> </li>
-            <li> <a href="grid.html"><span>Cases &amp; Covers</span></a> </li>
-            <li> <a href="grid.html"><span>Mobile Headphones</span></a> </li>
-            <li> <a href="grid.html"><span>Bluetooth Headsets</span></a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html"><span>Cameras</span></a>
-          <ul>
-            <li> <a href="grid.html"><span>Camcorders</span></a> </li>
-            <li> <a href="grid.html"><span>Point &amp; Shoot</span></a> </li>
-            <li> <a href="grid.html"><span>Digital SLR</span></a> </li>
-            <li> <a href="grid.html"><span>Camera Accesories</span></a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html"><span>Audio &amp; Video</span></a>
-          <ul>
-            <li> <a href="grid.html"><span>MP3 Players</span></a> </li>
-            <li> <a href="grid.html"><span>IPods</span></a> </li>
-            <li> <a href="grid.html"><span>Speakers</span></a> </li>
-            <li> <a href="grid.html"><span>Video Players</span></a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html"><span>Computer</span></a>
-          <ul>
-            <li> <a href="grid.html"><span>External Hard Disk</span></a> </li>
-            <li> <a href="grid.html"><span>Pendrives</span></a> </li>
-            <li> <a href="grid.html"><span>Headphones</span></a> </li>
-            <li> <a href="grid.html"><span>PC Components</span></a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html"><span>Appliances</span></a>
-          <ul>
-            <li> <a href="grid.html"><span>Vaccum Cleaners</span></a> </li>
-            <li> <a href="grid.html"><span>Indoor Lighting</span></a> </li>
-            <li> <a href="grid.html"><span>Kitchen Tools</span></a> </li>
-            <li> <a href="grid.html"><span>Water Purifier</span></a> </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li> <a href="grid.html">Furniture</a>
-      <ul>
-        <li> <a href="grid.html">Living Room</a>
-          <ul>
-            <li> <a href="grid.html">Racks &amp; Cabinets</a> </li>
-            <li> <a href="grid.html">Sofas</a> </li>
-            <li> <a href="grid.html">Chairs</a> </li>
-            <li> <a href="grid.html">Tables</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html" class="">Dining &amp; Bar</a>
-          <ul>
-            <li> <a href="grid.html">Dining Table Sets</a> </li>
-            <li> <a href="grid.html">Serving Trolleys</a> </li>
-            <li> <a href="grid.html">Bar Counters</a> </li>
-            <li> <a href="grid.html">Dining Cabinets</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Bedroom</a>
-          <ul>
-            <li> <a href="grid.html">Beds</a> </li>
-            <li> <a href="grid.html">Chest of Drawers</a> </li>
-            <li> <a href="grid.html">Wardrobes &amp; Almirahs</a> </li>
-            <li> <a href="grid.html">Nightstands</a> </li>
-          </ul>
-        </li>
-        <li> <a href="grid.html">Kitchen</a>
-          <ul>
-            <li> <a href="grid.html">Kitchen Racks</a> </li>
-            <li> <a href="grid.html">Kitchen Fillings</a> </li>
-            <li> <a href="grid.html">Wall Units</a> </li>
-            <li> <a href="grid.html">Benches &amp; Stools</a> </li>
-          </ul>
-        </li>
-      </ul>
-
-
-
-    </li>
-    <li><a href="grid.html">Kids</a> </li>
-    <li><a href="contact-us.html">Contact Us</a> </li>
+    <li><a href="grid.html">Hardware</a></li>
+    <li><a href="grid.html">Accessories</a>
+    <li><a href="grid.html">Supplies</a>
   </ul>
   <div class="top-links">
     <ul class="links">
-      <li><a title="My Account" href="login.html">My Account</a> </li>
-      <li><a title="Wishlist" href="wishlist.html">Wishlist</a> </li>
-      <li><a title="Checkout" href="checkout.html">Checkout</a> </li>
-      <li><a title="Blog" href="blog.html"><span>Blog</span></a> </li>
-      <li class="last"><a title="Login" href="login.html"><span>Login</span></a> </li>
+      <li><a title="Register" href="">Register</a></li>
+      <li><a title="SignIn" href="">Sign In</a></li>
+      <li class="last"><a title="Checkout" href=""><span>Checkout</span></a></li>
     </ul>
   </div>
 </div>
