myaccount_recent_order_list.html

--- a/myaccount_recent_order_list.html
+++ b/myaccount_recent_order_list.html
@@ -48,6 +48,7 @@
           <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 pull-right hidden-xs">
             <div class="toplinks">
               <div class="links">
+                <div class="login-text"><span>You are signed as</span>&nbsp;<span class="blue">Jim</span></div>
                 <div class="myaccount"><a title="My Account" href="login.html"><span class="hidden-xs">Français</span></a> </div>
                 <div class="myaccount"><a title="My Account" href="login.html"><span class="hidden-xs">Register</span></a> </div>
                 <div class="login"><a href="login.html"><span class="hidden-xs">Sign In</span></a> </div>
@@ -67,7 +68,7 @@
           <div class="logo"> <a title="Farnius" href="home.html"><img alt="Farnius" src="images/logo.png"> </a> </div>
           <!-- End Header Logo -->
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-3 hidden-xs category-search-form">
+        <div class="col-lg-7 col-md-6 col-sm-6 col-xs-3 hidden-xs category-search-form">
           <div class="contact-row">
             <div class="phone inline">
               <i class="fa fa-phone"></i>1-888-555-5555
@@ -94,7 +95,7 @@
             </form>
           </div>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 card_wishlist_area">
+        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-12 card_wishlist_area">
           <div class="mm-toggle-wrap">
             <div class="mm-toggle"><i class="fa fa-align-justify"></i><span class="mm-label">Menu</span> </div>
           </div>
@@ -102,11 +103,11 @@
             <!-- Top Cart -->
             <div class="mini-cart">
               <div data-toggle="dropdown" data-hover="dropdown" class="basket dropdown-toggle">
-                <a href="shopping_cart.html">
+                <a href="shopping_cart.html" class="exist">
                   <i class="fas fa-shopping-cart"></i>
-                  <span>Your shopping<br>cart is empty</span>
-                  <span class="cart_count">0</span>
-                  <!-- <div class="price">$4580</div> -->
+                  <span>Shopping Cart</span>
+                  <span class="cart_count">12</span>
+                  <div class="price">$1843.56</div>
                 </a>
               </div>
               <div>
@@ -197,13 +198,7 @@
         <div class="our-features-box hidden-xs">
           <div class="features-block">
             <div class="col-lg-9 col-md-9 col-xs-12 col-sm-9 offer-block">
-              <!-- <a href="#">Rebates</a> -->
-<!--               <a href="#">Special</a>
-              <a href="#">Value of the day</a>
-              <a href="#">Gift Cards</a>
-              <a href="#">Todays Deals</a>
-              <span>Free Worldwide Delivery</span>
- -->            </div>
+            </div>
           </div>
         </div>
       </div>
@@ -212,216 +207,101 @@
   <!-- end header -->
 
   <div class="container">
-    <div class="row">
-      <div class="brands-title brands-title-left"><h2>Shop Wheels By Brand</h2></div>
-      <div class="brands-divider" style="margin-top:30px;margin-bottom:10px;"></div>
-      <div class="brands-row">
-        <ul>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_american_racing.png"></div>
-                <div class="brand-name">American Racing</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_asanti.png"></div>
-                <div class="brand-name">Asanti</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_braelin.png"></div>
-                <div class="brand-name">Braelin</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_dai.png"></div>
-                <div class="brand-name">Dai</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_dub.png"></div>
-                <div class="brand-name">Dub</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_fast.png"></div>
-                <div class="brand-name">Fast</div>
-              </a>
-            </div>
-          </li>
-        </ul>
+    <div class="row recent-orders">
+      <div class="brands-title brands-title-left">
+        <h2>Recent Orders</h2>
       </div>
       <div class="brands-row">
-        <ul>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_kmc.png"></div>
-                <div class="brand-name">KMC</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_foose.png"></div>
-                <div class="brand-name">Foose</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_fuel.png"></div>
-                <div class="brand-name">Fuel</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_rockstar.png"></div>
-                <div class="brand-name">Rockstar</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_niche.png"></div>
-                <div class="brand-name">Niche</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_rotiform.png"></div>
-                <div class="brand-name">Rotiform</div>
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="brands-row">
-        <ul>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_ion.png"></div>
-                <div class="brand-name">Ion</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_replika.png"></div>
-                <div class="brand-name">Replika</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_xd.png"></div>
-                <div class="brand-name">XD</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_mayhem.png"></div>
-                <div class="brand-name">Mayhem</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_motech.png"></div>
-                <div class="brand-name">Motech</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_motometal.png"></div>
-                <div class="brand-name">Moto Metal</div>
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="brands-row" style="margin-bottom:60px;">
-        <ul>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_ruffino.png"></div>
-                <div class="brand-name">Ruffino</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_tourin.png"></div>
-                <div class="brand-name">Tourin</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_tsw.png"></div>
-                <div class="brand-name">TSW</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_usmag.png"></div>
-                <div class="brand-name">US Mag</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_bbs.png"></div>
-                <div class="brand-name">BBS</div>
-              </a>
-            </div>
-          </li>
-          <li class="col-lg-2 col-md-2 col-sm-4 col-xs-6 col-xs-12 item">
-            <div class="brand-inner">
-              <a href="">
-                <div class="brand-img"><img src="images/brand_rssw.png"></div>
-                <div class="brand-name">RSSW</div>
-              </a>
-            </div>
-          </li>
-        </ul>
+        <table class="data-table">
+          <tr>
+            <th class="no-break"><span>Order Number:</b></span></th>
+            <th>Date:</th>
+            <th class="ship-to no-break"><span>Ship To:</span></th>
+            <th class="no-break"><span>Order Total:</span></th>
+            <th>Status:</th>
+            <th>&nbsp;</th>
+          </tr>
+          <tr>
+            <td>125711692</td>
+            <td>02/10/2019</td>
+            <td class="no-break"><span>Jim Smith</span></td>
+            <td>$2,138.58</td>
+            <td>Processing</td>
+            <td class="view-order no-break"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+          <tr>
+            <td>123568247</td>
+            <td>02/07/2019</td>
+            <td class="no-break">Jim Smith</td>
+            <td>$695.25</td>
+            <td>Shipped</td>
+            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+          <tr>
+            <td>123456789</td>
+            <td>01/28/2019</td>
+            <td class="no-break">Jim Smith</td>
+            <td>$49.56</td>
+            <td>Delivered</td>
+            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+          <tr>
+            <td>125711692</td>
+            <td>02/10/2019</td>
+            <td class="no-break">Jim Smith</td>
+            <td>$2,138.58</td>
+            <td>Processing</td>
+            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+          <tr>
+            <td>123568247</td>
+            <td>02/07/2019</td>
+            <td class="no-break">Jim Smith</td>
+            <td>$695.25</td>
+            <td>Shipped</td>
+            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+          <tr>
+            <td>123456789</td>
+            <td>01/28/2019</td>
+            <td class="no-break">Jim Smith</td>
+            <td>$49.56</td>
+            <td>Delivered</td>
+            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+          <tr>
+            <td>125711692</td>
+            <td>02/10/2019</td>
+            <td class="no-break">Jim Smith</td>
+            <td>$2,138.58</td>
+            <td>Processing</td>
+            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+          <tr>
+            <td>123568247</td>
+            <td>02/07/2019</td>
+            <td class="no-break">Jim Smith</td>
+            <td>$695.25</td>
+            <td>Shipped</td>
+            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+          <tr>
+            <td>123456789</td>
+            <td>01/28/2019</td>
+            <td class="no-break">Jim Smith</td>
+            <td>$49.56</td>
+            <td>Delivered</td>
+            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+          <tr>
+            <td>123456789</td>
+            <td>01/28/2019</td>
+            <td class="no-break">Jim Smith</td>
+            <td>$49.56</td>
+            <td>Delivered</td>
+            <td class="view-order"><a href="" class=""><span>View Order</span></a></td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
