--- a/shop_tires_by_brand.html
+++ b/shop_tires_by_brand.html
@@ -213,7 +213,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="brands-title"><h2 style="text-align:left;padding-left:15px;">Shop Tires By Brand</h2></div>
+      <div class="brands-title brands-title-left"><h2>Shop Tires By Brand</h2></div>
       <div class="brands-divider" style="margin-top:30px;margin-bottom:10px;"></div>
       <div class="brands-row">
         <ul>
